master: Cleaned up config and routes

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -13,6 +13,6 @@ cassandra{
   host = ${?CASSANDRA_HOST}
   port = 9042
   port = ${?CASSANDRA_PORT}
-  keyspace = "URLs"
-  table = "URL"
+  keyspace = "urls"
+  table = "url"
 }
