master: Added config, changed session connection. Added Postman collection

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,8 +11,16 @@ myApp {
 cassandra{
   host = "localhost"
   host = ${?CASSANDRA_HOST}
-  port = 9042
+  port = "9042"
   port = ${?CASSANDRA_PORT}
   keyspace = "urls"
   table = "url"
+}
+
+datastax-java-driver {
+  basic {
+    contact-points = [${cassandra.host}${cassandra.port}]
+    load-balancing-policy.local-datacenter = datacenter1
+  }
+  advanced.reconnect-on-init = true
 }
