master: Cleanup and tests

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,7 +9,7 @@ myApp {
   }
 }
 cassandra{
-  host = "localhost"
+  host = "127.0.0.1"
   host = ${?CASSANDRA_HOST}
   port = "9042"
   port = ${?CASSANDRA_PORT}
@@ -19,7 +19,8 @@ cassandra{
 
 datastax-java-driver {
   basic {
-    contact-points = [${cassandra.host}${cassandra.port}]
+//    contact-points = [${cassandra.host}":"${cassandra.port}]
+    contact-points = ["127.0.0.1:9042"]
     load-balancing-policy.local-datacenter = datacenter1
   }
   advanced.reconnect-on-init = true
