master: Config for shortened URL length

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,6 +7,7 @@ myApp {
     # If ask takes more time than this to complete the request is failed
     askTimeout = 5s
   }
+  shortenedUrlLength = 8
 }
 cassandra{
   host = "127.0.0.1"
